--- a/13- Functions/index.html
+++ b/13- Functions/index.html
@@ -31,9 +31,11 @@
       }
       .buy {
         left: 2rem;
+        cursor: pointer;
       }
       .poll {
         right: 2rem;
+        cursor: pointer;
       }
     </style>
   </head>
